--- a/index.html
+++ b/index.html
@@ -239,10 +239,11 @@
     <!-- FOOTER -->
     <footer>
       <div class="container">
-        <p>© 2025 Dominick | Powered by ChatGPT</p>
+        <p>© 2026 Dominic | Powered by Web XP</p>
       </div>
     </footer>
 
     <script src="script.js"></script>
   </body>
 </html>
+
